{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 20,
  "lineage": "0f7f4648-53ad-6193-f230-cf9ba12d0901",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f264e6ab888e776",
            "arn": "arn:aws:ec2:ap-northeast-1:287827628210:elastic-ip/eipalloc-04f264e6ab888e776",
            "association_id": "eipassoc-0689f65d90b40f8cb",
            "domain": "vpc",
            "id": "eipalloc-04f264e6ab888e776",
            "instance": "i-09a9d522f733a3bb5",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0ded579b2c55d5d8f",
            "private_dns": "ip-10-0-1-28.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-3-115-141-166.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.115.141.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "video-message-app-dev-app-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "video-message-app-dev-app-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_efs_file_system.shared",
            "aws_instance.app_server",
            "aws_security_group.app_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01ff1fcabf5f7572c",
            "arn": "arn:aws:ec2:ap-northeast-1:287827628210:instance/i-09a9d522f733a3bb5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a9d522f733a3bb5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "video-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ded579b2c55d5d8f",
            "private_dns": "ip-10-0-1-28.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-54-250-96-23.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.250.96.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:287827628210:key/6f18fb78-f573-4fcf-affa-f10d46c7fed4",
                "throughput": 125,
                "volume_id": "vol-0c2bb60d8bc06744b",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049277651bf1b92af",
            "tags": {
              "AutoStop": "true",
              "Environment": "dev",
              "Name": "video-message-app-dev-app",
              "Type": "Application"
            },
            "tags_all": {
              "AutoStop": "true",
              "Environment": "dev",
              "Name": "video-message-app-dev-app",
              "Type": "Application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bfa0a725b28dea03"
            ]
          },
          "dependencies": [
            "aws_efs_file_system.shared",
            "aws_security_group.app_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287827628210:internet-gateway/igw-018e247ffe0b0f946",
            "id": "igw-018e247ffe0b0f946",
            "owner_id": "287827628210",
            "tags": {
              "Environment": "dev",
              "Name": "video-message-app-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "video-message-app-dev-igw"
            },
            "vpc_id": "vpc-0a431e126a5bc5f6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287827628210:route-table/rtb-00f7aa1acef60f001",
            "id": "rtb-00f7aa1acef60f001",
            "owner_id": "287827628210",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018e247ffe0b0f946",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "video-message-app-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "video-message-app-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a431e126a5bc5f6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093826c173a39e5ae",
            "route_table_id": "rtb-00f7aa1acef60f001",
            "subnet_id": "subnet-049277651bf1b92af"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287827628210:security-group/sg-0bfa0a725b28dea03",
            "description": "Security group for application server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfa0a725b28dea03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API",
                "from_port": 55433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55433
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend",
                "from_port": 55434,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55434
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "VOICEVOX",
                "from_port": 50021,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50021
              }
            ],
            "name": "video-message-app-dev-app-sg",
            "name_prefix": "",
            "owner_id": "287827628210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "video-message-app-dev-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "video-message-app-dev-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a431e126a5bc5f6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287827628210:security-group/sg-0bf4dd6356008c29f",
            "description": "Security group for EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf4dd6356008c29f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from App Server",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bfa0a725b28dea03"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "NFS from GPU Server",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b29034f8e083c0fe"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "video-message-app-dev-efs-sg",
            "name_prefix": "",
            "owner_id": "287827628210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "video-message-app-dev-efs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "video-message-app-dev-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a431e126a5bc5f6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.gpu_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gpu_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287827628210:security-group/sg-0b29034f8e083c0fe",
            "description": "Security group for GPU server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b29034f8e083c0fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "OpenVoice from App Server",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bfa0a725b28dea03"
                ],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "video-message-app-dev-gpu-sg",
            "name_prefix": "",
            "owner_id": "287827628210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "video-message-app-dev-gpu-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "video-message-app-dev-gpu-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a431e126a5bc5f6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287827628210:subnet/subnet-049277651bf1b92af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049277651bf1b92af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287827628210",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "video-message-app-dev-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "video-message-app-dev-public"
            },
            "vpc_id": "vpc-0a431e126a5bc5f6b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287827628210:vpc/vpc-0a431e126a5bc5f6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08539958027daf413",
            "default_route_table_id": "rtb-02361071cdfda56e7",
            "default_security_group_id": "sg-0b7313edd002acd72",
            "dhcp_options_id": "dopt-0e721e9c02e09a0a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a431e126a5bc5f6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02361071cdfda56e7",
            "owner_id": "287827628210",
            "tags": {
              "Environment": "dev",
              "Name": "video-message-app-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "video-message-app-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}